# cppev

./: .bazelrc  .clang-format  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  MODULE.bazel  README.md  process.md
.github/workflows/: cppev-build-and-test.yaml
bztools/: package.bzl  toolchain.bzl
bztools/shell/: BUILD
examples/: BUILD  CMakeLists.txt  README.md
examples/file_transfer/: BUILD  CMakeLists.txt  config.h  file_transfer_client.cc  file_transfer_server.cc
examples/io_evlp/: BUILD  config.h  tcp_client.cc  tcp_server.cc  udp_client.cc  udp_server.cc
examples/tcp_stress/: BUILD  config.h  simple_client.cc  simple_server.cc
src/include/cppev/: buffer.h  common.h  cppev.h  dynamic_loader.h  enent_loop.h  event_loop.h  io.h  ipc.h  lock.h  logger.h  module.h  runnable.h  scheduler.h  subprocess.h  tcp.h  thread_pool.h  utils.h
src/lib/: common.cpp  dynamic_loader.cpp  event_loop_common.cpp  event_loop_epoll.cpp  event_loop_kqueue.cpp  io.cpp  ipc.cpp  lock.cpp  logger.cpp  runnable.cpp  subprocess.cpp  tcp.cpp  thread_pool.cpp  utils.cpp
unittest/: BUILD  CMakeLists.txt  DynamicLoaderTestImpl.cc  DynamicLoaderTestImpl.h  DynamicLoaderTestImplFunctions.cc  DynamicLoaderTestInterface.h  config.h  test_buffer.cc  test_dynamic_loader.cc  test_event_loop.cc  test_io.cc  test_ipc.cc  test_lock.cc  test_logger.cc  test_runnable.cc  test_scheduler.cc  test_subprocess.cc  test_thread_pool.cc  test_utils.cc
